gke/deploy-ping.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
        - name: ping
          image: gcr.io/gdglyon-cloudrun/latency
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      serviceAccountName: ping-sa
---
apiVersion: v1
kind: Service
metadata:
  name: ping-service
spec:
  selector:
    app: ping
  ports:
    - port: 80
      targetPort: 8080
      appProtocol: http
  type: LoadBalancer
